--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: "monstserrat";
+    src: url('./assets//fonts//Montserrat-Regular.ttf');
+}
+
